latest commit on date : 22-02-2021

--- a/public/css/sstechshippingapp.css
+++ b/public/css/sstechshippingapp.css
@@ -20,6 +20,14 @@
     word-break: break-all;
 }
 
+#processqueuegrid_dt,#rolegrid_dt,#usergrid_dt,#storegrid_dt,#settingsgrid_dt,#apiloggrid_dt,#lbldetailsgrid_dt,#manifestgrid_dt.table-data2.table tbody td{
+	text-align:center!important;
+}
+#processqueuegrid_dt,#rolegrid_dt,#usergrid_dt,#storegrid_dt,#settingsgrid_dt,#apiloggrid_dt,#lbldetailsgrid_dt,#manifestgrid_dt.table-data2.table thead th{
+	text-align:center!important;
+}
+
+
 
 
 
